# uClinux-dist

./: .gitignore  Makefile  release_notes
Documentation/: ATHEROS-PB42-HOWTO
bfin_patch/ad73322_patch/: old_sound_ad73322.patch
bfin_patch/adeos_patch/: README  adeos-bfin.patch
bfin_patch/preempt_rt/: README.txt
config/: Configure.help  Kconfig  auto.conf  config.in  mkconfig
config/kconfig/: conf
include/: Makefile
lib/: Kconfig  Kconfig.local  Makefile  Makefile.local
lib/DirectFB/: Makefile
lib/SDL_gfx/: Makefile
lib/SDL_image/: Makefile
lib/SDL_mixer/: Makefile
lib/SDL_ttf/: Makefile
lib/STLport/: Makefile
lib/alsa-lib/: Makefile
lib/boost/: Makefile
lib/e2fsprogs-libs/: Makefile
lib/faac/: Makefile
lib/fltk/: Makefile  config.h  configh.in  configure.in  makeinclude
lib/fltk-1.1/: Makefile  config.h  makeinclude
lib/freetype/: Makefile
lib/libdes/: Makefile
lib/libgcrypt/: Makefile
lib/libgmp/: configfsf.sub
lib/libjpeg/: Makefile
lib/libmcapi/: Makefile  Makefile.am  configure.ac  mcapi.c  mcapi_trans_stub.c
lib/libmcapi/libmcapi-1.0/: Makefile.am  configure.ac
lib/libmcapi/libmcapi-2.0/tests/: Makefile  Makefile.am  Makefile.in  bmp2jpg.c  cces_msg1.c  endpoints1.c  msg1.c  msg2.c  pkt1.c  pkt2.c  pkt3.c  scl1.c  scl2.c
lib/libnl/: ChangeLog
lib/libpng/: Makefile
lib/libsamplerate/: Makefile
lib/libsdl/: Makefile
lib/libssl/: Makefile
lib/libvncserver/: Makefile
lib/libxml2/: Makefile
lib/mediastreamer/: Makefile
lib/mpeg2dec/: Makefile
lib/nxlib/: Makefile
lib/ortp/: Makefile
lib/pcre/: makefile
lib/qt-embedded/: Makefile
lib/speex/: Makefile
lib/sqlite/: Makefile
lib/tslib-1.0/: Makefile  Makefile.am  Makefile.in  configure
linux-2.4.x/: CREDITS  MAINTAINERS  Makefile
linux-2.4.x/Documentation/: Configure.help
linux-2.4.x/crypto/: Config.in
linux-2.4.x/fs/: Makefile  binfmt_elf.c  fcntl.c  locks.c  namei.c
linux-2.4.x/init/: main.c
linux-2.4.x/kernel/: panic.c  sched.c  sysctl.c
linux-2.4.x/mm/: memory.c
linux-2.4.x/mmnommu/: filemap.c
linux-2.4.x/net/: netsyms.c
linux-2.6.x/: CREDITS  MAINTAINERS  Makefile
linux-2.6.x/drivers/: Makefile
linux-2.6.x/fs/: Kconfig  Makefile  binfmt_flat.c  block_dev.c  exec.c  namei.c
linux-2.6.x/init/: main.c
linux-2.6.x/kernel/: compat.c  fork.c  softirq.c  time.c  timer.c
linux-2.6.x/mm/: filemap.c  nommu.c  oom_kill.c  page_alloc.c
linux-2.6.x/net/: Kconfig
openswan/: CHANGES  Makefile.inc  Makefile.ver
testsuites/: board_info.exp  copy_image.exp  kernel_config.exp  kernel_test  make_config_musb.exp  make_config_reserve_mem.exp  make_cut_busybox_config.exp  make_cut_fs_config.exp  make_default_config.exp  make_image.exp  make_kernel.exp  make_mtd_config.exp  make_release_L1.exp  reboot_kernel.exp
testsuites/ad5258/: ad5258_test.exp  build_ad5258_kernel.exp
testsuites/adf702x/: build_adf702x_kernel.exp
testsuites/adp5520/: build_adp5520_kernel.exp
testsuites/adp5588_qwerty/: build_adp5588_qwerty_kernel.exp
testsuites/adp8860/: adp8860_test.exp
testsuites/adxl/: adxl_test.exp  build_adxl_kernel.exp
testsuites/atapi/: atapi_hd_test.exp  build_atapi_hd_kernel.exp
testsuites/audio/: ad1938.patch  audio_data_test.exp  audio_test.exp  build_audio_kernel.exp  one_channel_audio_test.exp  snd2fftw_test.exp
testsuites/bluetooth/: bluetooth_test.exp  build_bluetooth_bf548_kernel.exp  build_bluetooth_kernel.exp
testsuites/bluetoothalsa/: bluetoothalsa_test.exp  build_bluetoothalsa_kernel.exp
testsuites/bluetoothcf/: bluetoothcf_test.exp  build_bluetoothcf_kernel.exp
testsuites/bluetoothuart/: bluetoothuart_test.exp  build_bluetoothuart_kernel.exp
testsuites/boot_addr/: build_boot_addr_kernel.exp
testsuites/camera/: adv7183_test.exp  build_camera_kernel.exp  camera_test.exp
testsuites/canbus/: build_canbus_kernel.exp  canbus_test.exp
testsuites/cap_touch/: build_cap_touch_kernel.exp  cap_touch_test.exp
testsuites/cfcard/: build_cfcard_kernel.exp  cfcard_test.exp
testsuites/change_cpufreq/: build_change_cpufreq_kernel.exp  change_cpufreq_test.exp
testsuites/coreb/: build_coreb_kernel.exp
testsuites/debug_mmrs/: build_debug_mmrs_kernel.exp
testsuites/dhrystone/: dhrystone_test.exp
testsuites/directfb/: build_directfb_kernel.exp  directfb_test.exp
testsuites/dmacopy/: build_dmacopy_kernel.exp
testsuites/edn/: edn_test.exp
testsuites/ethernet/: build_ethernet_kernel.exp  ethernet_test.exp
testsuites/ethernet_wakeup/: build_ethernet_wakeup_kernel.exp  ethernet_wakeup_test.exp
testsuites/fixed_code/: fixed_code_test.exp
testsuites/g729/: build_g729_kernel.exp  g729_test.exp
testsuites/generic_gpio/: build_generic_gpio_kernel.exp  generic_gpio_test.exp
testsuites/gptimer/: gptimer_test.exp
testsuites/i2ctwi/: build_i2ctwi_kernel.exp  build_i2ctwi_keyboard_kernel.exp  build_i2ctwi_lcd_kernel.exp  (+2 more)
tools/: autotools.mk  cross-fix-root  cross-pkg-config  dev-table-to-cpio.awk  gitweb.mk  romfs-inst.sh
uClibc/: Makefile.in  Rules.mak
user/: Kconfig  Kconfig.local  Makefile  Makefile.local
user/blkfin-apps/icc_utils/libmcapi_coreb/libmcapi-1.0/: Makefile.am  Makefile.in  configure.ac
user/haserl/: ChangeLog  INSTALL  Makefile  Makefile.in  README  THANKS  TODO  aclocal.m4  configure  configure.ac  makefile
user/haserl/doc/: Makefile.in  haserl.1
user/haserl/haserl-0.9.25/src/: h_bash.c  rfc2388.c
user/haserl/src/: Makefile.am  Makefile.in  common.c  common.h  config.h.in  h_bash.c  h_bash.h  h_error.c  h_lua.c  h_lua.h  h_lua_common.c  h_luascript.c  h_script.c  h_script.h  haserl.c  haserl.h  haserl_lualib.inc  haserl_lualib.lua  rfc2388.c  sliding_buffer.c  sliding_buffer.h
(+3016 files in other folders)
